CI: Remove rosenbrock flame graph job for now

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -297,11 +297,12 @@ steps:
     steps:
 
       # TODO: add/exercise edmf code
-      - label: ":computer: Unthreaded performance target (Rosenbrock)"
-        command: "julia --color=yes --project=perf perf/benchmark.jl --job_id perf_target_unthreaded_rosenbrock --ode_algo ODE.Rosenbrock23 --enable_threading false --forcing held_suarez --vert_diff true --surface_scheme bulk --moist equil --rad allskywithclear --microphy 0M --dt 1secs --t_end 10secs --dt_save_to_sol Inf --z_elem 25 --h_elem 12"
-        artifact_paths: "perf_target_unthreaded_rosenbrock/*"
-        agents:
-          slurm_mem: 20GB
+      # Comment out the following job for now, until flame graph w/ changing ID is cleared
+      # - label: ":computer: Unthreaded performance target (Rosenbrock)"
+      #   command: "julia --color=yes --project=perf perf/benchmark.jl --job_id perf_target_unthreaded_rosenbrock --ode_algo ODE.Rosenbrock23 --enable_threading false --forcing held_suarez --vert_diff true --surface_scheme bulk --moist equil --rad allskywithclear --microphy 0M --dt 1secs --t_end 10secs --dt_save_to_sol Inf --z_elem 25 --h_elem 12"
+      #   artifact_paths: "perf_target_unthreaded_rosenbrock/*"
+      #   agents:
+      #     slurm_mem: 20GB
 
       - label: ":computer: Unthreaded performance target"
         command: "julia --color=yes --project=perf perf/benchmark.jl --job_id perf_target_unthreaded --enable_threading false --forcing held_suarez --vert_diff true --surface_scheme bulk --moist equil --rad allskywithclear --microphy 0M --dt 1secs --t_end 10secs --dt_save_to_sol Inf --z_elem 25 --h_elem 12"
@@ -391,11 +392,12 @@ steps:
         agents:
           slurm_mem: 20GB
 
-      - label: ":rocket: flame graph: perf target (ρe_tot) (Rosenbrock)"
-        command: "julia --color=yes --project=perf perf/flame.jl --job_id flame_perf_target_rhoe_rosenbrock --ode_algo ODE.Rosenbrock23"
-        artifact_paths: "flame_perf_target_rhoe_rosenbrock/*"
-        agents:
-          slurm_mem: 20GB
+      # Comment out the following job for now, until flame graph w/ changing ID is cleared
+      # - label: ":rocket: flame graph: perf target (ρe_tot) (Rosenbrock)"
+      #   command: "julia --color=yes --project=perf perf/flame.jl --job_id flame_perf_target_rhoe_rosenbrock --ode_algo ODE.Rosenbrock23"
+      #   artifact_paths: "flame_perf_target_rhoe_rosenbrock/*"
+      #   agents:
+      #     slurm_mem: 20GB
 
       - label: ":rocket: benchmark: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=perf perf/benchmark.jl --job_id bm_sphere_baroclinic_wave_rhoe"
