--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -203,7 +203,7 @@ steps:
     steps:
 
       - label: ":computer: Test IO"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --t_end 2hours --job_id test_io --dt_save_to_sol 1hours --dt_save_to_disk 1hours --post_process false"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --microphy 0M --rad clearsky --t_end 2hours --job_id test_io --dt_save_to_sol 1hours --dt_save_to_disk 1hours --post_process false"
         artifact_paths: "test_io/*"
 
       - label: ":computer: Use test env with latest deps"
