Suppress allocation table

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -418,10 +418,11 @@ steps:
       - label: ":rocket: benchmark: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=perf perf/benchmark.jl --job_id bm_sphere_baroclinic_wave_rhoe"
 
-      - label: ":mag: Allocations: perf target"
-        command: "julia --color=yes --project=perf perf/allocs.jl"
-        agents:
-          slurm_mem: 20GB
+      # TODO: temporarily suppressed to reduce CI times
+      # - label: ":mag: Allocations: perf target"
+      #   command: "julia --color=yes --project=perf perf/allocs.jl"
+      #   agents:
+      #     slurm_mem: 20GB
 
   - wait: ~
     continue_on_failure: true
