--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -385,11 +385,10 @@ steps:
       - label: ":rocket: benchmark: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=perf perf/benchmark.jl --job_id bm_sphere_baroclinic_wave_rhoe"
 
-      # TODO: temporarily suppressed to reduce CI times
-      # - label: ":mag: Allocations: perf target"
-      #   command: "julia --color=yes --project=perf perf/allocs.jl"
-      #   agents:
-      #     slurm_mem: 20GB
+      - label: ":mag: Allocations: perf target"
+        command: "julia --color=yes --project=perf perf/allocs.jl"
+        agents:
+          slurm_mem: 20GB
 
   - wait: ~
     continue_on_failure: true
